# nvjdec

./: Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: CI.yml
src/: allocators.rs  decoder.rs  lib.rs  manager.rs  nv.rs  nv_custom.rs
src/decoder/: buffer.rs  image.rs  nv.rs
