[package]
name = "pynvdec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pynvdec"
crate-type = ["cdylib"]

[dependencies]
color-eyre = "0.6.2"
ffi-opaque = "2.0.1"
libc = "0.2.147"
pyo3 = { version = "0.18.3", features = ["eyre"] }
pyo3-tch = "0.13.0"
tch = "0.13.0"

[build-dependencies]
bindgen = "0.66.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
